--- a/index.html.html
+++ b/index.html.html
@@ -290,7 +290,7 @@ Deep cleaning & disinfecting of Bathrooms and Toilets</textarea></div>
 
       <div id="sec_footer" class="footer keep-together">
         <div>
-          <div style="color:var(--accent);font-weight:700)">Thank you!</div>
+          <div style="color:var(--accent);font-weight:700">Thank you!</div>
           <div>Best Regards,</div>
           <div><strong id="p_signer_name">Sonali Joseph</strong></div>
           <div id="p_signer_role">Customer Service Executive</div>
@@ -593,4 +593,5 @@ Deep cleaning & disinfecting of Bathrooms and Toilets</textarea></div>
 </script>
 </body>
 </html>
+
 
