--- a/index.html.html
+++ b/index.html.html
@@ -290,7 +290,7 @@ Deep cleaning & disinfecting of Bathrooms and Toilets</textarea></div>
 
       <div id="sec_footer" class="footer keep-together">
         <div>
-          <div style="color:var(--accent);font-weight:700">Thank you!</div>
+          <div style="color:var(--accent);font-weight:700)">Thank you!</div>
           <div>Best Regards,</div>
           <div><strong id="p_signer_name">Sonali Joseph</strong></div>
           <div id="p_signer_role">Customer Service Executive</div>
@@ -445,29 +445,15 @@ Deep cleaning & disinfecting of Bathrooms and Toilets</textarea></div>
 
   // Prefill next quotation number (peek; not reserved)
   async function prefillQuotationNumber(){
-  if (inQNo.value.trim()) return; // user already typed
-  try {
-    const res = await fetch('/api/peek-quote-no');
-    if (!res.ok) return;
-    const data = await res.json();
-    if (data && data.ok && data.quotation_no) {
-      inQNo.value = data.quotation_no;
-      inQNo.dataset.prefilled = "1";      // mark as peeked
-      pQNo.textContent = data.quotation_no;
-    }
-    } catch (err) {
-      console.warn('peek-quote-no failed', err);
-    }
-  }
- 
-    // inside prefillQuotationNumber()
-    if (d.ok && d.quotation_no) {
-      inQNo.value = d.quotation_no;
-      inQNo.dataset.prefilled = "1";              // <-- mark as prefetched
-      pQNo.textContent = d.quotation_no;
-    }
-    inQNo.addEventListener('input', () => { delete inQNo.dataset.prefilled; });
-
+    if (inQNo.value.trim()) return;
+    try{
+      const r = await fetch('/api/peek-quote-no');
+      const d = await r.json();
+      if (d.ok && d.quotation_no){
+        inQNo.value = d.quotation_no;
+        pQNo.textContent = d.quotation_no;
+      }
+    }catch{}
   }
 
   // JSON Save/Load
@@ -505,85 +491,57 @@ Deep cleaning & disinfecting of Bathrooms and Toilets</textarea></div>
   });
 
   // Generate PDF = Save to DB + PDF
-  
   document.getElementById('btn_pdf').addEventListener('click', async (e)=>{
-  e.preventDefault();
+    e.preventDefault();
 
-  const isPrefilled = inQNo.dataset.prefilled === "1";
-  const qnoForServer = isPrefilled ? '' : (inQNo.value || '').trim();  // <-- key line
+    // Save first
+    const payload = {
+      qno: (inQNo.value||'').trim(),
+      name: (inName.value||'').trim(),
+      mobile: (inPhone.value||'').trim(),
+      amount: (pTotal.textContent||'0.00').trim(),
+      title: (inTitle.value||'').trim(),
+      signer: (inSignerName.value||'').trim()
+    };
 
-  const payload = {
-    qno: qnoForServer,
-    name: (inName.value||'').trim(),
-    mobile: (inPhone.value||'').trim(),
-    amount: (pTotal.textContent||'0.00').trim(),
-    title: (inTitle.value||'').trim(),
-    signer: (inSignerName.value||'').trim()
-  };
+    let serverQNo = (inQNo.value||'').trim();
+    try{
+      const resp = await fetch('/api/save-quote', {
+        method:'POST', headers:{'Content-Type':'application/json'},
+        body: JSON.stringify(payload)
+      });
+      const data = await resp.json();
+      if (!data.ok) throw new Error(data.error || 'Save failed');
 
-  let serverQNo = (inQNo.value||'').trim();
+      if (data.quotation_no){
+        serverQNo = data.quotation_no;
+        inQNo.value = data.quotation_no;
+        pQNo.textContent = data.quotation_no;
+      }
+      // optional: use data.version
+    }catch(err){
+      console.error(err);
+      alert('Could not save the quotation to database. Please try again.');
+      return;
+    }
 
-  // 1) SAVE FIRST
-  let data;
-  try {
-    const resp = await fetch('/api/save-quote', {
-      method:'POST', headers:{'Content-Type':'application/json'},
-      body: JSON.stringify(payload)
-    });
-    data = await resp.json();
-    if (!data.ok) throw new Error(data.error || 'Save failed');
-  } catch (err) {
-    console.error(err);
-    alert('Could not save the quotation to database. Please try again.');
-    return;
-  }
+    // Update preview and hide empty images section
+    secImages.style.display = hasGalleryImages()? '' : 'none';
+    updateAll();
 
-  // write back the authoritative number/version
-  if (data.quotation_no){
-    serverQNo = data.quotation_no;
-    inQNo.value = data.quotation_no;
-    delete inQNo.dataset.prefilled;               // it’s now a real assigned number
-    document.getElementById('p_qno').textContent = data.quotation_no;
-  }
+    // Generate PDF filename with final quotation no.
+    const safeName=(inName.value||'Quotation').replace(/[^\w\-]+/g,'_');
+    const fn=`${serverQNo || 'Quotation'}_${safeName}_${inDate.value || todayISO}.pdf`;
 
-  // 2) UPDATE PREVIEW & HIDE EMPTY IMAGES
-  const hasGalleryImages = () =>
-    Array.from(document.querySelectorAll('#p_gallery img'))
-      .some(img => !!img.getAttribute('src'));
-  document.getElementById('sec_images_block').style.display = hasGalleryImages()? '' : 'none';
-  updateAll();
-
-  // 3) GENERATE PDF (await it so errors are visible)
-  const safeName=(inName.value||'Quotation').replace(/[^\w\-]+/g,'_');
-  const todayISO = new Date().toISOString().slice(0,10);
-  const fn=`${serverQNo || 'Quotation'}_${safeName}_${inDate.value || todayISO}.pdf`;
-  const isPrefilled = inQNo.dataset.prefilled === "1";
-  const qnoForServer = isPrefilled ? '' : (inQNo.value || '').trim();
-
-  
-  if (typeof html2pdf === 'undefined') {
-  alert('PDF library failed to load. Please refresh the page.');
-  return;
-  }  
-    
-  try {
-    await html2pdf()
-      .set({
-        margin:0,
-        filename:fn,
-        image:{type:'jpeg',quality:0.98},
-        html2canvas:{scale:2,useCORS:true,backgroundColor:'#ffffff'},
-        jsPDF:{unit:'px',format:[794,1123],orientation:'portrait'},
-        pagebreak:{mode:['css','legacy']}
-      })
-      .from(document.getElementById('quote'))
-      .save();
-  } catch (err) {
-    console.error('PDF error:', err);
-    alert('PDF could not be generated. Check console for details.');
-  }
-});
-
+    html2pdf().set({
+      margin:0,
+      filename:fn,
+      image:{type:'jpeg',quality:0.98},
+      html2canvas:{scale:2,useCORS:true,backgroundColor:'#ffffff'},
+      jsPDF:{unit:'px',format:[794,1123],orientation:'portrait'},
+      pagebreak:{mode:['css','legacy']}
+    }).from(document.getElementById('quote')).save();
+  });
 
   // Reset
   document.getElementById('btn_reset').addEventListener('click', ()=>{
@@ -606,9 +564,3 @@ Deep cleaning & disinfecting of Bathrooms and Toilets</textarea></div>
 </script>
 </body>
 </html>
-
-
-
-
-
-
